# vortex

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CITE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  generate.py  generate_transformers.py  local_setup.py  log  prompt.txt  pyproject.toml  requirements.txt  requirements.txt.frozen  requirements.txt.frozen_update  run  run_generate  run_tests  setup.py  test_savanna_conversion.py
configs/: 7b-sh-32k-v1.yml  evo2-7b-8k.yml  sh-stem-test.yml  shc-evo2-100m-8k-1T.yml  shc-evo2-1b-8k-1T.yml  shc-evo2-40b-1M.yml  shc-evo2-40b-8k-11T-v2.yml  shc-evo2-50m-8k-1T.yml  shc-evo2-7b-8k-2T-v1.yml  shc-evo2-7b-8k-2T-v2-131k.yml  shc-evo2-7b-8k-2T-v2-1M.yml  shc-evo2-7b-8k-2T-v2-262k.yml  shc-evo2-7b-8k-2T-v2-524k.yml  shc-evo2-7b-8k-2T-v2-64k.yml  shc-evo2-7b-8k-2T-v2-interleave.yml  shc-evo2-7b-8k-2T-v2.yml  shc-evo2-7b-8k-2T-v2_debug.yml
configs/archive/: _1b_old  compare_1m.yml  debug-shc-evo2-7b-8k-2T-v2.yml  debug_attn.yml  debug_hcl.yml  debug_hcm.yml  debug_hcs.yml  shc-evo2-1b-8k-1T-nointerleave.yml  shc-evo2-40b-8k-11T-1M.yml  shc-evo2-40b-8k-11T-v2 copy.yml  shc-evo2-7b-8k-2T-1m.yml  shc-evo2-7b-8k-2T-v2-32k.yml  shc-evo2-7b-8k-2T-v2-interleave-nofp8.yml  shc-evo2-7b-8k-2T-v2-no-interleave.yml
primitives/triton_kernels/: README.md
primitives/triton_kernels/cgcg/: interface.py  ref_fwd.py  utils.py
stripedhyena/: engine.py  generation.py  layers.py  model.py
test/: accuracy_test_forward.py  accuracy_test_generation.py  test_backward.py  test_evo2_forward.py  test_evo2_generation.py  test_forward.py  test_numerics.py  test_prefill.py
vortex/: logging.py
vortex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vortex/model/: attention.py  cache.py  engine.py  generation.py  layers.py  model.py  positional_embeddings.py  rotary.py  tokenizer.py  utils.py
vortex/ops/: __init__.py  attn_interface.py
vortex/ops/attn/: setup.py
vortex/ops/conv/: ref_fwd.py  setup.py
vortex/ops/dsp/: ref_bwd.py  ref_fwd.py
vortex/ops/embedding/: rotary.py
vortex/ops/hyena_se/: __init__.py  _bwd_tma.py  _bwd_two_kernel.py  bwd.py  bwd_kernels.py  fwd.py  fwd_kernels.py  ref_bwd.py  (+2 more)
(+70 files in other folders)
