[build-system]
requires = [
    "torch>=2.5.1",
    "setuptools>=42",
    "numpy",
    "wheel",
    "cmake",
    "pybind11",
    "ninja",
    "transformer_engine[pytorch]==1.13.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "vortex"
version = "1.0.0"
description = "Reference implementation of operators for deep signal processing architectures"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michael Poli" }]
requires-python = ">=3.10"
dependencies = [
    "einops==0.8.0",
    "packaging",
    "tqdm",
    "PyYAML",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
combine_star = true

[tool.setuptools]
packages = ["vortex"]
