[build-system]
requires = [
    "torch>=2.5.0,<=2.6.1",
    "setuptools>=42",
    "wheel",
    "cmake",
    "pybind11",
    "ninja",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "vtx"
version = "1.0.4"
description = "Reference implementation of operators for deep signal processing architectures"
readme = "README.md"
authors = [{ name = "Michael Poli" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1,<=2.6.1",
    "transformer_engine[pytorch]==1.13.0",
    "numpy",
    "einops==0.8.0",
    "packaging",
    "rich",
    "tqdm",
    "PyYAML",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
combine_star = true
